# THAMES

./: .gitignore  .gitmodules  AUTHORS.md  CHANGES.md  CMakeLists.txt  DISCLAIMER.md  INSTALL.md  LICENSE.md  README.md  WindowsBuildInstructions.md  install.sh  md
GEMS3K/: gems3k_impex.cpp  ipm_chemical.cpp  ipm_chemical2.cpp  ipm_main.cpp  m_param.h  node.cpp  nodearray.h  s_activity.cpp  v_detail.h
doc/: WindowsBuildInstructions.md  chemistry-annotated.xml
doc/BuildGuide/: BuildGuide.tex
doc/Figures/: Figures.key
doc/IDFunctions/: IDFunctions.tex
doc/InputGuide/: InputPrepTutorial.tex  inputJSONFilesDocumentation.tex  inputPrepGuide.fdb_latexmk  inputPrepGuide.fls  inputPrepGuide.tex
doc/OutputGuide/: outputGuide.tex  outputPrepGuide.tex
gemcalc/: gemcalc.pro
node-arango/: Upload-gems3k_iodata.json  arangodb-config.json  ipm_test.json
sample-input/alite-293K-sat-wc35/: README.md  alite20-dat.lst  alite20-dbr.lst  alite20-sol-dat.lst  alite20-sol-dbr.lst  chemistry.xml  input.in  parameters.xsd
sample-input/alite-298K-sealed-wc35/: README.md  alite-dbr.lst  alite-sol-dbr.lst  chemistry.xml  input.in
sample-input/inputfiles-02/: README.md  cement.img.init  cement.noalk.img.init  chemistry.xml  input.in
sample-input/inputfiles-03/: README.md  chemistry.xml  input.in
sample-input/inputfiles-04/: README.md  ccr140-w45.img.init  chemistry.xml  input.in
sample-input/portcem-298K-sat-noalk-wc45/: README.md  chemistry.xml
sample-input/portcem-298K-sat-wc35/: README.md  ccr140-w35.img.init  ccr140-w45.img.init  chemistry.xml  input.in  parameters.xml  portcem-sol-dbr.lst
sample-input/portcem-298K-sat-wc45/: README.md  chemistry.xml  portcem-dat.lst
sample-input/portcem-298K-sealed-alk-wc45/: chemistry.xml
sample-input/portcem-for-alite/: README.md  c3s-w35.img.init  chemistry-alite.xml  input.in
sample-output/: README.blg  README.fdb_latexmk  README.tex
sample-output/obsolete-output/: Myrefs.bib  README.aux  README.bbl  README.fls
sample-output/output-02/: cem140-sat-01.10000.298.img  cem140-sat-01.10000.298.ppm  cem140-sat-01.10200.298.img  cem140-sat-01.10200.298.ppm  cem140-sat-01.10400.298.img  cem140-sat-01.10400.298.ppm  cem140-sat-01.10600.298.img  cem140-sat-01.10600.298.ppm  cem140-sat-01.10800.298.img  cem140-sat-01.10800.298.ppm  cem140-sat-01.11000.298.img  cem140-sat-01.11000.298.ppm  cem140-sat-01.11200.298.img  cem140-sat-01.11200.298.ppm  cem140-sat-01.1127.298.img  cem140-sat-01.1127.298.ppm  cem140-sat-01.11400.298.img  cem140-sat-01.11400.298.ppm  cem140-sat-01.11600.298.img  cem140-sat-01.11600.298.ppm  cem140-sat-01.11800.298.img  cem140-sat-01.11800.298.ppm  cem140-sat-01.12000.298.img  cem140-sat-01.12000.298.ppm  cem140-sat-01.12200.298.img  cem140-sat-01.12200.298.ppm  cem140-sat-01.12400.298.img  cem140-sat-01.12400.298.ppm  cem140-sat-01.12600.298.img  cem140-sat-01.12600.298.ppm  cem140-sat-01.12800.298.img  cem140-sat-01.12800.298.ppm  cem140-sat-01.13000.298.img  cem140-sat-01.13000.298.ppm  cem140-sat-01.13200.298.img  cem140-sat-01.13200.298.ppm  cem140-sat-01.13400.298.img  cem140-sat-01.13400.298.ppm  cem140-sat-01.13600.298.img  cem140-sat-01.13600.298.ppm  (+107 more)
src/: Doxyfile$  Doxyfile.in  createmic.c  installAndUseTHAMES-SAversion.txt  thames.cc  thames.h  version.h
src/Cemdata14.01/: compos.3rdparty.cemdata.ver14.01.ndx  dcomp.3rdparty.cemdata.ver14.01.ndx  phase.3rdparty.cemdata.ver14.01.ndx  reacdc.3rdparty.cemdata.ver14.01.ndx  sdref.3rdparty.cemdata.ver14.01.ndx
src/Cemdata18.01/: compos.3rdparty.cemdata.aam.ver18.01.ndx  compos.3rdparty.cemdata.pc.ver18.01.ndx  dcomp.3rdparty.cemdata.ver18.01.ndx  phase.3rdparty.cemdata.aam.csh+ht.ver18.01.ndx  phase.3rdparty.cemdata.pc.csh.csh2o.ver18.01.ndx  phase.3rdparty.cemdata.pc.csh.csh3t.ver18.01.ndx  phase.3rdparty.cemdata.pc.csh.cshkn.ver18.01.ndx  phase.3rdparty.cemdata.pc.csh.cshq.ver18.01.ndx  phase.3rdparty.cemdata.pc.ht.ver18.01.ndx  phase.3rdparty.cemdata.pc.ver18.01.ndx  phase.3rdparty.cemdata.ss-fe3.ver18.01.ndx  phase.3rdparty.cemdata.ss.ver18.01.ndx  reacdc.3rdparty.cemdata.ver18.01.ndx  readme.txt  sdref.3rdparty.cemdata.ver18.01.ndx
src/GEMS3K-mods/: datach.h  node.h
src/GEMS3K-standalone/: CMakeLists.txt  install.sh
src/auxmiclib/: CMakeLists.txt  auxmic.h  auxmiccomplex.h  auxmicfuncs.h  breakflocs.c  calcporedist3d.c  checkbc.c  complex.c  diam2vol.c  filehandler.c  fread_string.c  gtime.c  mediansize.c  memutil.c  messages.c  ran1.c  read_string.c  write_imgheader.c
src/mainToTestCarbonate_src/: thames.cc  thames.h
src/thameslib/: AppliedStrain.cc  AppliedStrain.h  CMakeLists.txt  ChemicalSystem.cc  ChemicalSystem.h  Controller.cc  Controller.h  ElasticModel.cc  ElasticModel.h  Exceptions.h  Interface.cc  Interface.h  Isite.cc  Isite.h  JSONParser.cc  JSONParser.h  KineticController.cc  KineticController.h  KineticData.h  KineticModel.cc  KineticModel.h  Lattice.cc  Lattice.h  ParrotKillohModel.cc  ParrotKillohModel.h  PozzolanicModel.cc  PozzolanicModel.h  RanGen.h  Site.cc  Site.h  Solution.cc  Solution.h  StandardKineticModel.cc  StandardKineticModel.h  StrainEnergy.h  ThermalStrain.cc  ThermalStrain.h  global.h  imageutil.h  myconfig.h  (+7 more)
src/thameslib/GEM3K/: node.cpp
src/thameslib/xsdfiles/: chemistry.xsd  parameters.xsd
src/vcctl2thames/: CMakeLists.txt  vcctl2thames.c  vcctl2thames.cc  vcctl2thames.h.in
src/viz/: CMakeLists.txt  ColorKey.key  mysfume.000154.298.img  mysfume.000777.298.img  mysfume.035715.298.img  scratchfilelist.txt  thames-microstructure.img  viz  viz.cc  viz.h  vizorig.cc
src/xsdfiles/: chemistry.xsd
tests/LoRes/: chemistry.xml
tests/PC-Carbonate/: README.md  chemistry.json  chemistry.xml  input.in  parameters.xml
tests/PC-Carbonate-200/: IPM_dump.txt  PC-Carb-dat.lst  README.md  input.in  output.txt  simparams.json
tests/PC-FlyAsh-200/: README.md  chemistry.xml  chemistry.xsd  input.in  parameters.json  simparams.json
tests/PC-FlyAsh-200_v3.0.0/: README.md  chemistry.json  chemistry.xml  input.in  parameters.json  parameters.xml
tests/PC-FlyAsh-200_v3.0.1-v4.0.0/: chemistry.xml
(+1190 files in other folders)
